Fix mobile scrollbar on modal

--- a/src/components/ProjectModal.css
+++ b/src/components/ProjectModal.css
@@ -131,6 +131,7 @@
 
   .modal-description {
     height: auto;
+    max-height: none; /* Remove scroll on mobile */
     padding: 0 !important;
   }
 
